syntax = "proto3";

option go_package = "iam-service/proto1";

package proto1;

import "modelauth.proto";

service AuthService {
  rpc RegisterUser(User) returns (RegisterResp) {}
  rpc LoginUser(LoginReq) returns (LoginResp) {}
  rpc Authorize(AuthorizationReq) returns (AuthorizationResp) {}
}

message AuthorizationReq {
  Resource subject = 1;
  Resource object = 2;
  repeated Attribute envAttributes = 3;
  string permissionName = 4;
}

message AuthorizationResp {
  bool authorized = 1;
}

message RegisterResp {
    User user = 1;
}

message LoginReq {
    string email = 1;
    string password = 2;
}

message LoginResp {
    string token = 1;
}
